Bug 440149. Don't break after empty text at the start of the line, even if we're past the available width. r=smontagu